--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
     "core-js": "^3.8.3",
+    "leancloud-storage": "^4.15.2",
     "vue": "^3.2.13",
     "vue-router": "^4.6.3"
   },
